--- a/app/src/main/res/layout/activity_summary_page.xml
+++ b/app/src/main/res/layout/activity_summary_page.xml
@@ -20,6 +20,7 @@
         android:text="Notegenie"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/summariesTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,12 +33,14 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="103dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/manrope_extrabold"
         android:gravity="left"
         android:text="Summaries"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/searchBarCard"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appTitle" />
@@ -45,11 +48,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="450dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="18dp"
         android:translationY="-10dp"
         app:layout_constraintBottom_toTopOf="@+id/generateSummaryButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBarCard">
 
         <ListView
             android:id="@+id/listOfSummariesView"
