--- a/app/src/main/res/layout/activity_display_summary_content.xml
+++ b/app/src/main/res/layout/activity_display_summary_content.xml
@@ -7,13 +7,13 @@
     tools:context=".DisplaySummaryContent">
 
     <Button
-        android:id="@+id/saveButton"
+        android:id="@+id/exportButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="37dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="#BEDE79"
-        android:text="Save"
+        android:text="Export"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
