--- a/app/src/main/res/layout/activity_display_summary_content.xml
+++ b/app/src/main/res/layout/activity_display_summary_content.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EAE8E0"
+    android:backgroundTint="#EAE8E0"
     tools:context=".DisplaySummaryContent">
 
     <Button
@@ -13,6 +15,7 @@
         android:layout_marginEnd="37dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="#BEDE79"
+        android:onClick="exportToPDF"
         android:text="Export"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +42,7 @@
         android:fontFamily="@font/manrope_extrabold"
         android:text="Summary Of: "
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +69,7 @@
                 android:id="@+id/summaryContentsView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fontFamily="serif"
                 android:text="TextView" />
         </LinearLayout>
     </ScrollView>
