--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -7,6 +7,7 @@
     android:background="#414C6B"
     tools:context=".HomePage">
 
+    <!-- APP NAME TITLE -->
     <TextView
         android:id="@+id/appTitle"
         android:layout_width="wrap_content"
@@ -15,56 +16,81 @@
         android:width="209dp"
         android:height="57dp"
         android:fontFamily="@font/manrope_extrabold"
-        android:text="Notegenie"
+        android:text="@string/app_name"
         android:textColor="#FFFFFF"
-        android:textSize="40sp"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.037" />
+    <!-- APP NAME TITLE -->
 
+    <!-- PAGE TITLE -->
     <TextView
         android:id="@+id/homeTextView"
         android:layout_width="209dp"
         android:layout_height="57dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="16dp"
         android:fontFamily="@font/manrope_extrabold"
         android:gravity="left"
-        android:text="Home"
+        android:text="Home Page"
         android:textColor="#FFFFFF"
-        android:textSize="30sp"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appTitle" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.143" />
+    <!-- PAGE TITLE -->
 
+    <!-- HAMBURGER MENU -->
     <ImageView
         android:id="@+id/navigatePagesMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="103dp"
         android:layout_marginTop="90dp"
-        android:layout_marginEnd="59dp"
-        android:layout_marginBottom="617dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/homeTextView"
+        app:layout_constraintHorizontal_bias="0.894"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.026"
         app:srcCompat="@drawable/baseline_menu" />
+    <!-- // HAMBURGER MENU -->
 
-
+    <!-- ADD FILE BUTTON -->
     <Button
         android:id="@+id/addFileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#FFE45C"
         android:text="Add File"
         android:textColor="#000000"
         android:translationY="-10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/_dynamic" />
+    <!-- // ADD FILE BUTTON -->
 
+    <!-- LOGOUT BUTTON -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/logoutBtn"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:text="@string/logout"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.037" />
+    <!-- // LOGOUT BUTTON -->
 </androidx.constraintlayout.widget.ConstraintLayout>
