- Moved logout to hamburger menu rather than standalone button - Changed status bar background color of HomePage, FlashcardsPage and SummaryPage

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightGrey">#DCDCDC</color>
     <color name="grey">#9E9E9E</color>
+    <color name="bgColor">#414C6B</color>
+
 
 </resources>
