--- a/app/src/main/res/layout/activity_flashcards_page.xml
+++ b/app/src/main/res/layout/activity_flashcards_page.xml
@@ -13,15 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="-30dp"
-        android:width="209dp"
+        android:width="270dp"
         android:height="57dp"
         android:fontFamily="@font/manrope_extrabold"
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
-        android:textSize="35sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
+        app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.037" />
@@ -32,16 +32,18 @@
         android:id="@+id/flashcardsTextView"
         android:layout_width="209dp"
         android:layout_height="57dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="-30dp"
         android:fontFamily="@font/manrope_extrabold"
         android:gravity="left"
         android:text="Flashcards"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.143" />
+        app:layout_constraintVertical_bias="0.132" />
     <!-- PAGE TITLE -->
 
     <!-- HAMBURGER MENU -->
@@ -49,31 +51,14 @@
         android:id="@+id/navigatePagesMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.894"
+        app:layout_constraintHorizontal_bias="0.914"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.026"
+        app:layout_constraintVertical_bias="0.059"
         app:srcCompat="@drawable/baseline_menu" />
     <!-- // HAMBURGER MENU -->
 
-    <!-- LOGOUT BUTTON -->
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/logoutBtn"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:text="@string/logout"
-        app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.921"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
-    <!-- // LOGOUT BUTTON -->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
