--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,40 +8,44 @@
     tools:context=".HomePage">
 
     <!-- APP NAME TITLE -->
+    <!-- APP NAME TITLE -->
+
+    <!-- PAGE TITLE -->
+
     <TextView
         android:id="@+id/appTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="-30dp"
-        android:width="209dp"
+        android:width="270dp"
         android:height="57dp"
         android:fontFamily="@font/manrope_extrabold"
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
-        android:textSize="35sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
+        app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.037" />
-    <!-- APP NAME TITLE -->
 
-    <!-- PAGE TITLE -->
     <TextView
         android:id="@+id/homeTextView"
         android:layout_width="209dp"
         android:layout_height="57dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="-30dp"
         android:fontFamily="@font/manrope_extrabold"
         android:gravity="left"
         android:text="Home Page"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.143" />
+        app:layout_constraintVertical_bias="0.132" />
     <!-- PAGE TITLE -->
 
     <!-- HAMBURGER MENU -->
@@ -49,13 +53,12 @@
         android:id="@+id/navigatePagesMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.894"
+        app:layout_constraintHorizontal_bias="0.914"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.026"
+        app:layout_constraintVertical_bias="0.059"
         app:srcCompat="@drawable/baseline_menu" />
     <!-- // HAMBURGER MENU -->
 
@@ -76,21 +79,4 @@
         app:layout_constraintTop_toBottomOf="@+id/_dynamic" />
     <!-- // ADD FILE BUTTON -->
 
-    <!-- LOGOUT BUTTON -->
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/logoutBtn"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:text="@string/logout"
-        app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.921"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
-    <!-- // LOGOUT BUTTON -->
 </androidx.constraintlayout.widget.ConstraintLayout>
