--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -59,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#FFE45C"
+        android:onClick="addFile"
         android:text="Add File"
         android:textColor="#000000"
         android:translationY="-10dp"
