--- a/app/src/main/res/layout/activity_display_summary_content.xml
+++ b/app/src/main/res/layout/activity_display_summary_content.xml
@@ -39,7 +39,7 @@
         android:layout_height="85dp"
         android:layout_marginTop="38dp"
         android:layout_marginBottom="76dp"
-        android:fontFamily="@font/manrope_extrabold"
+        android:fontFamily="@font/roboto_bold"
         android:text="Summary Of: "
         android:textAlignment="center"
         android:textColor="#000000"
