--- a/app/src/main/res/layout/activity_mega_mind_map.xml
+++ b/app/src/main/res/layout/activity_mega_mind_map.xml
@@ -27,17 +27,12 @@
         android:layout_width="392dp"
         android:layout_height="86dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/manrope_extrabold"
+        android:fontFamily="@font/roboto_bold"
         android:gravity="left"
         android:text="Mind Map:"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-         />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
