--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -38,8 +38,8 @@
         android:id="@+id/homeTextView"
         android:layout_width="209dp"
         android:layout_height="57dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="103dp"
         android:fontFamily="@font/manrope_extrabold"
         android:gravity="left"
@@ -47,19 +47,17 @@
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/navigatePagesMenu"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/appTitle" />
 
     <ImageView
         android:id="@+id/navigatePagesMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="59dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.059"
         app:srcCompat="@drawable/baseline_menu" />
     <!-- // HAMBURGER MENU -->
 
