--- a/app/src/main/res/layout/activity_add_summary_page.xml
+++ b/app/src/main/res/layout/activity_add_summary_page.xml
@@ -47,6 +47,7 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="14dp"
                 android:layout_marginEnd="50dp"
+                android:hint="Summary Title"
                 android:background="@null"
                 android:fontFamily="@font/roboto_bold"
                 android:text=""
@@ -103,7 +104,6 @@
         android:layout_marginEnd="37dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="#BEDE79"
-        android:onClick="exportToPDF"
         android:text="Save"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
